--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
-.idea/
+#gradle files
 build/
 .gradle/
 
+# IntelliJ project files
 *.iml
-*.ipr
 *.iws
+*.ipr
+.idea/
+
+# eclipse project file
+.settings/
+.classpath
+.project
+
+# NetBeans specific
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
