--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'war'
+    id "org.gretty" version "3.0.4"
 }
 
 group 'mx.ipn.upiicsa'
@@ -8,15 +9,17 @@ version '1.0'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     //testImplementation 'junit:junit:4.11'
     //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
+    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.postgresql:postgresql:42.2.14'
+    implementation 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
 }
 
 task explodedWar(type: Copy) {
