--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,11 @@ repositories {
 }
 
 dependencies {
-    //testImplementation 'junit:junit:4.11'
-    //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    providedCompile "javax.servlet:javax.servlet-api:$tomcat9ServletApiVersion"
     implementation 'org.postgresql:postgresql:42.2.14'
+    implementation 'com.zaxxer:HikariCP:4.0.3'
 }
 
 task explodedWar(type: Copy) {
