--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,9 @@ repositories {
 }
 
 dependencies {
-    //testImplementation 'junit:junit:4.11'
-    //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'org.postgresql:postgresql:42.2.14'
-    implementation 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.21'
 }
 
 task explodedWar(type: Copy) {
