--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ repositories {
 dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    runtimeOnly 'mysql:mysql-connector-java:8.0.21'
+    implementation 'com.zaxxer:HikariCP:4.0.3'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.25'
 }
 
 task explodedWar(type: Copy) {
