--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'com.zaxxer:HikariCP:4.0.3'
     runtimeOnly 'mysql:mysql-connector-java:8.0.25'
+    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
 }
 
 task explodedWar(type: Copy) {
